--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -69,7 +69,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: $spacing-400;
-  gap: $spacing-400 $spacing-200;
+  gap: $spacing-200;
 }
 
 .selected-cards,
