--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -7,14 +7,13 @@
   .field-description {
     p {
       padding-bottom: 0;
-      font-size: 18px;
-      font-weight: 500;
+      font-weight: 400;
       line-height: 133%;
       color: $text-dark-primary;
       margin-bottom: $spacing-200;
 
       @include media('desktop') {
-        font-size: 20px;
+        font-size: $size-font-body-default;
       }
     }
   }
