--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -6,6 +6,8 @@
   min-height: $wizard-body-height;
   height: 100%;
   padding-bottom: 120px; // more spacing at the bottom to be able to scroll through past the last content
+  position: relative;
+  z-index: 1; // needed for background
 
   @include media('tablet') {
     min-height: $wizard-body-height-tablet;
