--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -72,6 +72,7 @@
   background-color: $color-primary;
   color: $color-white;
   border: 2px solid $stroke-accent;
+  font-weight: 500;
 
   &:hover {
     background-color: $color-primary-dark;
@@ -94,13 +95,14 @@
   background-color: transparent;
   color: $text-dark-primary;
   border: 2px solid $stroke-tertiary;
+  background-color: $color-white;
 
   &:hover {
-    background-color: $color-shade-blue-10;
+    border-color: $stroke-accent;
   }
 
   &:active {
-    background-color: $color-shade-blue-25;
+    border-color: $stroke-dark;
   }
 
   &:disabled {
