--- a/styles/base/_wizard-buttons.scss
+++ b/styles/base/_wizard-buttons.scss
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: space-between;
   gap: $spacing-300;
-  border-top: 1px solid $stroke-secondary;
+  border-top: 1px solid $color-border-secondary;
 
   @include media('tablet') {
     max-height: $footer-height-tablet;
