--- a/blocks/form/components/wizard/_wizard-intro.scss
+++ b/blocks/form/components/wizard/_wizard-intro.scss
@@ -15,6 +15,38 @@
     padding-top: 96px;
   }
 
+  // Vertically align icon and text in each row
+  .field-wrapper.row {
+    display: flex;
+    align-items: center;
+    gap: $spacing-400;
+    flex-wrap: wrap;
+  }
+
+  // Scoped icon styling inside .job-seeker-icon
+  .job-seeker-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    picture > img {
+      display: block;
+      max-width: 100%;
+      width: 80px;
+      height: 80px;
+
+      @include media('tablet') {
+        width: 96px;
+        height: 96px;
+      }
+
+      @include media('desktop') {
+        width: 112px;
+        height: 112px;
+      }
+    }
+  }
+
   picture {
     margin-bottom: $spacing-700;
 
