--- a/blocks/form/components/modal/modal.scss
+++ b/blocks/form/components/modal/modal.scss
@@ -50,6 +50,7 @@ body.modal-open {
   background-position: center;
   background-size: 24px;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .modal dialog .section {
