feat(form): general spacing, duplicate code and removed specificity

--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.css
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.css
@@ -1,3 +1,3 @@
-fieldset.advanceddatepicker{display:flex}fieldset.advanceddatepicker > legend{font-size:clamp(1.0625rem, 1.5vw, 1.25rem);line-height:160%}fieldset.advanceddatepicker[data-required=true] > legend::after{content:"*";color:var(--form-error-color);padding-inline-start:0.3125rem}fieldset.advanceddatepicker > .drop-down-wrapper{flex:1}
+.form .advanceddatepicker{display:flex;flex-wrap:wrap;gap:1rem}.form .advanceddatepicker > legend{font-size:clamp(1.0625rem, 1.5vw, 1.25rem);line-height:160%}.form .advanceddatepicker[data-required=true] > legend::after{content:"*";color:#d03633;padding-inline-start:0.3125rem}.form .advanceddatepicker > .drop-down-wrapper{flex:1 1 0%}.form .advanceddatepicker .field-wrapper + .field-wrapper.drop-down-wrapper{margin-top:0}
 
 /*# sourceMappingURL=advanceddatepicker.css.map */
