--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -2,7 +2,7 @@
 
 .field-summary {
   padding: $spacing-600 $spacing-600 $spacing-600 0;
-  border-top: solid 2px $color-border-secondary;
+  border-top: solid 2px $color-shade-navy-20;
 
   .edit {
     width: 56px;
@@ -42,7 +42,7 @@
     font-weight: $font-weight-regular;
     line-height: 160%;
     letter-spacing: 0;
-    border-bottom: solid 2px $color-border-secondary;
+    border-bottom: solid 2px $color-shade-navy-20;
     padding-top: $spacing-450;
     padding-bottom: $spacing-450;
     margin-bottom: $spacing-300;
