--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
@@ -1,20 +1,25 @@
 @use '../../../../styles/settings' as *;
 
+.form .advanceddatepicker {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $spacing-400;
 
-fieldset.advanceddatepicker {
-    display: flex;
+  > legend {
+    @include font-body-large;
+  }
 
-    >legend {
-        @include font-body-large;
-    }
+  &[data-required='true'] > legend::after {
+    content: '*';
+    color: $color-feedback-red;
+    padding-inline-start: 0.3125rem;
+  }
 
-    &[data-required=true]>legend::after {
-        content: "*";
-        color: var(--form-error-color);
-        padding-inline-start: 0.3125rem;
-    }
+  > .drop-down-wrapper {
+    flex: 1 1 0%;
+  }
 
-    >.drop-down-wrapper {
-        flex: 1;
-    }
+  .field-wrapper + .field-wrapper.drop-down-wrapper {
+    margin-top: 0;
+  }
 }
