--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -189,11 +189,11 @@
           cursor: pointer;
           min-height: 48px;
           transition: background-color 0.2s ease, color 0.2s ease;
-
           background: $color-white;
           border: 2px solid $stroke-tertiary;
           border-right: none;
           border-radius: 0;
+          margin-bottom: 0;
 
           &::before,
           &::after {
