--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -3,7 +3,6 @@
 
 .search-box {
   position: relative;
-  margin-bottom: $spacing-600;
 
   .field-description {
     p {
@@ -68,9 +67,12 @@
 .selected-cards {
   display: flex;
   flex-wrap: wrap;
-  margin: $spacing-400 0 $spacing-600 0;
   gap: $spacing-200;
 }
+.selected-cards-wrapper:has(.selected-card--is-selected) {
+  margin: $spacing-400 0 $spacing-600 0;
+}
+
 
 .selected-cards,
 .recommendations-cards {
