--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -4,6 +4,24 @@
   &[data-max='1'] button.item-add {
     display: none;
   }
+  
+  > fieldset[data-index="0"]{
+    .field-first-entry-title{
+      display: block;
+    }
+    .field-additional-entries-title{
+      display: none;
+    }
+  }
+  
+  > fieldset:not([data-index="0"]){
+    .field-first-entry-title{
+      display: none;
+    }
+    .field-additional-entries-title{
+      display: block;
+    }
+  }
 
   .repeatable-entries {
     .repeatable-entry {
