--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -5,7 +5,7 @@
  */
 
 /* Target labels that have a description to apply flex layout. */
-.form .field-main-checkbox {
+.form .extended-checkbox {
   align-items: center;
   border-radius: $border-radius-mid;
   border: 2px solid $color-shade-navy-40;
