--- a/blocks/form/components/formtabs/formtabs.scss
+++ b/blocks/form/components/formtabs/formtabs.scss
@@ -1,7 +1,7 @@
 @use '../../../../styles/settings' as *;
 
 .form:not(.edit-mode) {
-  fieldset.formtabs {
+  .formtabs {
     padding: 0;
     margin-bottom: 32px;
 
@@ -9,7 +9,7 @@
       display: none;
     }
 
-    > fieldset.formtab {
+    > .formtab {
       margin: 0;
       display: none;
     }
