--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -27,6 +27,7 @@ $size-font-h6: clamp(18px, 2.25vw, 20px);
 
 // Subtitle
 $size-font-subtitle: clamp(24px, 4vw, 32px);
+$size-font-subtitle-footer: clamp(20px, 2.75vw, 24px);
 
 // Strap Titles
 $size-font-strap-title: clamp(28px, 4vw, 32px);
