--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -84,7 +84,7 @@ main > .section.columns-container:nth-of-type(2) {
     letter-spacing: $letter-spacing-default;
     text-decoration: none;
 
-    &::before {
+    /*&::before {
       content: "";
       display: inline-block;
       width: $spacing-400;
@@ -92,7 +92,7 @@ main > .section.columns-container:nth-of-type(2) {
       background: url("/images/footer-icon-blue-arrow-bend-right.svg") no-repeat
       center;
       background-size: contain;
-    }
+    }*/
 
     &:hover,
     &:focus {
@@ -268,11 +268,7 @@ main > .section.columns-container:nth-of-type(3) a::before {
 /* ----------------------------- */
 /* BUTTON CONTAINER RESET */
 /* ----------------------------- */
-main > .section.columns-container:nth-of-type(1) .button-container,
-main > .section.columns-container:nth-of-type(2) .button-container,
-main > .section.columns-container:nth-of-type(3) .button-container {
-  all: unset;
-}
+
 main > .section.columns-container:nth-of-type(1) .button-container .link-with-icon a,
 main > .section.columns-container:nth-of-type(2) .button-container .link-with-icon a,
 main > .section.columns-container:nth-of-type(3) .button-container .link-with-icon a {
@@ -301,7 +297,7 @@ main > .section.columns-container:nth-of-type(3) .button-container .link-with-ic
 
       a.button {
         display: inline-block;
-        padding-left: 0; // Remove left padding
+        padding-left: 16px;
         text-align: left;
         margin-left: 0; // Ensure no margin left
       }
