--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -175,6 +175,11 @@ footer h5 {
   color: $color-shade-navy-40;
 }
 
+footer .strap-title-small {
+  font-size: $size-font-strap-title-small;
+  color: pink;
+}
+
 /* ----------------------------- */
 /* GLOBAL ALIGNMENT OVERRIDES FOR FOOTER */
 /* ----------------------------- */
