--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -27,7 +27,6 @@ $size-font-h6: clamp(18px, 2.25vw, 20px);
 
 // Subtitle
 $size-font-subtitle: clamp(24px, 4vw, 32px);
-$size-font-subtitle-footer: clamp(20px, 2.75vw, 24px);
 
 // Strap Titles
 $size-font-strap-title: clamp(28px, 4vw, 32px);
@@ -37,6 +36,9 @@ $size-font-strap-title-small: clamp(14px, 2.2vw, 16px);
 $size-font-body-large: clamp(17px, 1.5vw, 20px);
 $size-font-body-default: clamp(15px, 1.25vw, 17px);
 $size-font-body-small: clamp(12px, 1.1vw, 14px);
+
+// Footer Text
+$size-font-footer-large: clamp(20px, 2.75vw, 24px);
 
 // Labels
 $size-font-label-title: clamp(17px, 1.5vw, 20px);
