--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -1,14 +1,11 @@
+
 @use "../../styles/settings" as *;
 
 /* ----------------------------- */
 /* SECTION 1 - DARK GRADIENT BACKGROUND + ICON LINKS */
 /* ----------------------------- */
 main > .section.columns-container:nth-of-type(1) {
-  background: linear-gradient(
-                  135deg,
-                  $color-primary-dark-navy 25%,
-                  $color-primary-navy 100%
-  );
+  background: linear-gradient(135deg, $color-primary-dark-navy 25%, $color-primary-navy 100%);
   color: $color-white;
   padding: $spacing-650 $spacing-600 $spacing-600 $spacing-600;
   flex-direction: column;
@@ -30,19 +27,9 @@ main > .section.columns-container:nth-of-type(1) {
     letter-spacing: $letter-spacing-default;
     text-decoration: none;
 
-    /*&::before {
-      content: "";
-      display: inline-block;
-      width: $spacing-400;
-      height: $spacing-400;
-      background: url("/images/footer-icon-blue-arrow-bend-right.svg") no-repeat
-      center;
-      background-size: contain;
-    }*/
-
     &:hover,
     &:focus {
-      color:$color-white;
+      color: $color-white;
     }
   }
 
@@ -50,12 +37,12 @@ main > .section.columns-container:nth-of-type(1) {
     color: $color-shade-navy-40;
   }
 
-   .strap-title-small {
+  .strap-title-small {
     font-size: $size-font-strap-title-small;
     color: pink;
   }
 
-   .typography .p-large {
+  .typography.p-large {
     font-size: $size-font-footer-large;
   }
 }
@@ -76,7 +63,6 @@ main > .section.columns-container:nth-of-type(2) {
   gap: $spacing-200;
   align-self: stretch;
 
-  // Add inner shadow
   box-shadow: inset 0 $spacing-100 $spacing-200 0 rgba(22, 44, 69, 0.6);
 
   a {
@@ -93,16 +79,6 @@ main > .section.columns-container:nth-of-type(2) {
     letter-spacing: $letter-spacing-default;
     text-decoration: none;
 
-    /*&::before {
-      content: "";
-      display: inline-block;
-      width: $spacing-400;
-      height: $spacing-400;
-      background: url("/images/footer-icon-blue-arrow-bend-right.svg") no-repeat
-      center;
-      background-size: contain;
-    }*/
-
     &:hover,
     &:focus {
       color: $color-white;
@@ -117,7 +93,6 @@ main > .section.columns-container:nth-of-type(3) {
   background-color: $color-primary-dark-navy;
   color: $color-white;
   padding: $spacing-200 $spacing-600;
-
 
   .columns.block.columns-1-cols > div > div {
     display: flex;
@@ -171,7 +146,6 @@ main > .section.columns-container:nth-of-type(3) {
 footer a {
   color: $color-shade-blue-40;
   text-align: left;
-
   font-family: $font-family;
   font-size: $size-font-body-default;
   font-style: normal;
@@ -179,8 +153,6 @@ footer a {
   line-height: 133%;
   letter-spacing: $letter-spacing-default;
 }
-
-
 
 /* ----------------------------- */
 /* GLOBAL ALIGNMENT OVERRIDES FOR FOOTER */
@@ -197,7 +169,7 @@ footer img {
 }
 
 /* ----------------------------- */
-/* GLOBAL ALIGNMENT FOR ALL FOOTER IMAGES */
+/* GLOBAL FOOTER IMAGE ALIGNMENT */
 /* ----------------------------- */
 footer img,
 footer picture,
@@ -213,7 +185,7 @@ footer .columns-img-col picture > img {
 }
 
 /* ----------------------------- */
-/* GLOBAL FOOTER <p> COLOR OVERRIDE */
+/* FOOTER <p> COLOR OVERRIDES */
 /* ----------------------------- */
 main > .section.columns-container:nth-of-type(1) p,
 main > .section.columns-container:nth-of-type(2) p,
@@ -224,8 +196,6 @@ main > .section.columns-container:nth-of-type(3) p {
 /* ----------------------------- */
 /* IMAGE ALIGNMENT PER SECTION */
 /* ----------------------------- */
-
-/* Section 1 - Align images left */
 main > .section.columns-container:nth-of-type(1),
 main > .section.columns-container:nth-of-type(2) {
   img,
@@ -244,7 +214,6 @@ main > .section.columns-container:nth-of-type(2) {
   }
 }
 
-/* Section 3 - Align images right */
 main > .section.columns-container:nth-of-type(3) {
   img,
   picture,
@@ -273,20 +242,21 @@ main > .section.columns-container:nth-of-type(3) a::before {
 }
 
 /* ----------------------------- */
-/* BUTTON CONTAINER RESET */
+/* CUSTOM LINK BUTTON STYLES */
 /* ----------------------------- */
-
 main > .section.columns-container:nth-of-type(1) .button-container .link-with-icon a,
 main > .section.columns-container:nth-of-type(2) .button-container .link-with-icon a,
 main > .section.columns-container:nth-of-type(3) .button-container .link-with-icon a {
   border: 1px solid pink;
 }
 
-
+/* ----------------------------- */
+/* LINK-WITH-ICON STYLES */
+/* ----------------------------- */
 .link-with-icon {
   display: flex;
   align-items: center;
-  gap: 0; // Remove gap between icon and link
+  gap: 0;
 
   > div {
     margin: 0;
@@ -306,9 +276,8 @@ main > .section.columns-container:nth-of-type(3) .button-container .link-with-ic
         display: inline-block;
         padding-left: 16px;
         text-align: left;
-        margin-left: 0; // Ensure no margin left
+        margin-left: 0;
       }
     }
   }
 }
-
