--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -75,7 +75,6 @@ main > .section.columns-container:nth-of-type(2) {
   align-items: flex-start;
   gap: $spacing-200;
   align-self: stretch;
-
   box-shadow: inset 0 $spacing-100 $spacing-200 0 rgba(22, 44, 69, 0.6);
 
   a {
@@ -263,11 +262,28 @@ main > .section.columns-container:nth-of-type(3) a::before {
   gap: 0;
 
   &.icon--right {
-   
+    flex-direction: row; // keep normal direction
+    justify-content: flex-start; // ensures whole block aligns left
 
     > div:first-child {
+      order: 2; // icon goes second (right of text)
       margin-left: $spacing-200;
       margin-right: 0;
+    }
+
+    > div:last-child {
+      order: 1; // text stays on the left
+    }
+
+    .button-container {
+      text-align: left;
+
+      a.button {
+        text-align: left;
+        padding-left: 0;
+        margin-left: 0;
+        display: inline-block;
+      }
     }
   }
 
@@ -282,17 +298,17 @@ main > .section.columns-container:nth-of-type(3) a::before {
       height: auto;
     }
 
-    .button-container {
-      display: inline-block;
+    .link-with-icon.large {
+      a,
+      .button-container a.button {
+      font-size: clamp(14px, 2.2vw, 16px);
 
-      a.button {
-        display: inline-block;
-        padding-left: 16px;
-        text-align: left;
-        margin-left: 0;
+        &:hover,
+        &:focus {
+          color: $color-white;
+        }
       }
     }
+
   }
 }
-
-
