--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -34,7 +34,7 @@ main > .section.columns-container:nth-of-type(1) {
 
   h5 {
     color: $color-shade-navy-40;
-    margin-bottom: $spacing-100;
+    margin: $spacing-400 0 $spacing-100 0;
   }
 
   .strap-title-small {
