--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -59,6 +59,12 @@ main > .section.columns-container:nth-of-type(1) {
 /* ----------------------------- */
 /* SECTION 2 - NAVY + REPEATING SVG */
 /* ----------------------------- */
+
+main > .section.columns-container:nth-of-type(2) {
+  background: pink url("../../images/website-footer-repeating-petals.svg") repeat !important;
+  min-height: 300px;
+}
+
 main > .section.columns-container:nth-of-type(2) {
   background-color: $color-primary-navy;
   background-image: url("/images/website-footer-repeating-petals.svg");
