--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -54,6 +54,10 @@ main > .section.columns-container:nth-of-type(1) {
     color: $color-shade-navy-40;
     margin-bottom: $spacing-300;
   }
+
+  .typography.p {
+    margin-bottom: $spacing-200;
+  }
 }
 
 /* ----------------------------- */
@@ -61,8 +65,9 @@ main > .section.columns-container:nth-of-type(1) {
 /* ----------------------------- */
 
 main > .section.columns-container:nth-of-type(2) {
-  background: pink url("../../images/website-footer-repeating-petals.svg") repeat !important;
-  min-height: 300px;
+  background: url("/images/website-footer-repeating-petals.svg") repeat;
+  background-color: $color-primary-navy;
+  min-height: 400px;
 }
 
 main > .section.columns-container:nth-of-type(2) {
