--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -203,6 +203,10 @@ main > .section.columns-container:nth-of-type(2) p {
   padding-right: 0;
 }
 
+main > .section.columns-container:nth-of-type(1) p {
+  margin:$spacing-100 0 $spacing-100 0;
+}
+
 
 /* ----------------------------- */
 /* IMAGE ALIGNMENT PER SECTION */
@@ -270,6 +274,8 @@ main > .section.columns-container:nth-of-type(3) a::before {
   &.icon--right {
     flex-direction: row;
     justify-content: flex-start;
+    font-size: 19px;
+    color: pink;
 
     > div:first-child {
       order: 2;
