--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -274,8 +274,6 @@ main > .section.columns-container:nth-of-type(3) a::before {
   &.icon--right {
     flex-direction: row;
     justify-content: flex-start;
-    font-size: 19px;
-    color: pink;
 
     > div:first-child {
       order: 2;
@@ -314,6 +312,7 @@ main > .section.columns-container:nth-of-type(3) a::before {
   a,
   .button-container a.button {
     font-size: clamp(12px, 1.1vw, 14px);
+    color: pink;
 
     &:hover,
     &:focus {
@@ -325,6 +324,7 @@ main > .section.columns-container:nth-of-type(3) a::before {
     a,
     .button-container a.button {
       font-size: clamp(14px, 2.2vw, 16px);
+      color:orange;
 
       &:hover,
       &:focus {
