--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -274,6 +274,8 @@ main > .section.columns-container:nth-of-type(3) a::before {
   &.icon--right {
     flex-direction: row;
     justify-content: flex-start;
+    font-size: 19px;
+    color: pink;
 
     > div:first-child {
       order: 2;
@@ -312,7 +314,6 @@ main > .section.columns-container:nth-of-type(3) a::before {
   a,
   .button-container a.button {
     font-size: clamp(12px, 1.1vw, 14px);
-    color: pink;
 
     &:hover,
     &:focus {
@@ -324,7 +325,6 @@ main > .section.columns-container:nth-of-type(3) a::before {
     a,
     .button-container a.button {
       font-size: clamp(14px, 2.2vw, 16px);
-      color:orange;
 
       &:hover,
       &:focus {
