--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -129,7 +129,7 @@
   .item-remove {
     @extend %button;
     @extend %button--primary;
-    display: none;
+    display: none !important;
     margin-top: 21px;
   }
 
