sepd-5540 standardize checkbox spacing

--- a/styles/forms/_checkbox.scss
+++ b/styles/forms/_checkbox.scss
@@ -3,6 +3,7 @@
 .checkbox-wrapper {
   display: flex;
   align-items: center;
+  margin-top: $spacing-200; //SEPD-5540 checkbox-spacing
 
   label {
     @extend %label-common-style;
