--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -140,7 +140,7 @@
       border-radius: $border-radius-mid;
       border: 2px solid $color-shade-navy-45;
       width: 100%;
-      margin: 0 0 $spacing-200 0;
+      //margin: 0 0 $spacing-200 0; //SEPD-5540 checkbox-spacing
       justify-content: space-between;
       transition: all 0.2s ease;
 
