--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -71,7 +71,7 @@
 }
 
 .selected-cards-wrapper:has(.selected-card--is-selected) {
-  margin: $spacing-400 0 $spacing-600 0;
+  margin: $spacing-400 0 0 0; //SEPD-5540 checkbox-spacing
 }
 
 .selected-cards,
