--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -105,7 +105,7 @@ FORM required asterisk for radio and checkbox group
   color: $text-primary;
   font-weight: 500;
   line-height: 133%;
-  margin-bottom: 8px;
+  //margin-bottom: 8px; SEPD-5540 checkbox-spacing
 }
 
 // Don't add asterisk after radio/checkbox labels
