--- a/styles/forms/_radio.scss
+++ b/styles/forms/_radio.scss
@@ -10,6 +10,7 @@
 
 .radio-wrapper {
   display: flex;
+  margin-top: $spacing-200; //SEPD-5540 checkbox-spacing
 
   label {
     @extend %label-common-style;
